--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,11 @@ figure {
     font-weight: 400;
     color: rgba(0, 0, 0, 0.5);
     padding: 0 20px;
-    width: 100%; }
+    width: 100%;
+    height:100%;
+
+
+}
     @media screen and (max-width: 768px) {
       #colorlib-aside .colorlib-footer {
         position: relative;
@@ -344,6 +348,9 @@ figure {
   min-height: 500px;
   background: #fff url(../images/loader.gif) no-repeat center center;
   width: 100%;
+  height:100%;  
+    
+    
   float: left;
   margin-bottom: 10em;
   clear: both; }
@@ -450,7 +457,10 @@ figure {
               border: 1px solid #000 !important; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-              width: 100%; } }
+              width: 100%; 
+              height:100%;
+              
+              } }
 
 body.offcanvas {
   overflow-x: hidden; }
@@ -494,6 +504,9 @@ body.offcanvas {
   padding-bottom: 9em;
   clear: both;
   width: 100%;
+  height:100%;  
+    
+    
   display: block; }
   @media screen and (max-width: 768px) {
     .colorlib-experience,
@@ -566,6 +579,8 @@ body.offcanvas {
   padding: 20px 25px;
   display: block;
   width: 100%;
+  height:100%;  
+    
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 1px;
@@ -948,7 +963,11 @@ body.offcanvas {
           font-size: 40px; } }
   .colorlib-feature .colorlib-text {
     padding-left: 120px;
-    width: 100%; }
+    width: 100%; 
+    height:100%;
+
+
+}
     .colorlib-feature .colorlib-text h2, .colorlib-feature .colorlib-text h3 {
       margin: 0;
       padding: 0; }
@@ -970,6 +989,11 @@ body.offcanvas {
 
 .blog-entry {
   width: 100%;
+  height:100%;  
+    
+    
+    
+    
   float: left;
   background: #fff;
   margin-bottom: 3em; }
@@ -978,6 +1002,9 @@ body.offcanvas {
       margin-bottom: 3em; } }
   .blog-entry .blog-img {
     width: 100%;
+    height:100%;  
+      
+      
     float: left;
     overflow: hidden;
     position: relative;
@@ -1043,6 +1070,10 @@ body.offcanvas {
   position: relative;
   height: 300px;
   width: 100%;
+  height:100%;  
+    
+    
+    
   display: block;
   margin-bottom: 30px; }
   .project .desc {
