--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,27 @@
 *	Edit this section
 *
 * ======================================================= */
+
+html {
+  height: 100%;
+  display: table;
+}
+ 
+body {
+  display: table-cell;
+  height: 100%;
+}
+
+/* =======================================================
+*
+* 	Template Style 
+*	Edit this section
+*
+* ======================================================= */
+
+
+
+
 body {
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
