--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,13 @@ body.offcanvas {
   font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-weight: 500; }
+  font-weight: 500;
+
+ height:100%;
+
+
+
+}
 
 .hire {
   padding: 2em;
