--- a/css/style.css
+++ b/css/style.css
@@ -1599,7 +1599,12 @@ padding-bottom: 10px;
   padding-bottom: 1em; }
   @media screen and (max-width: 768px) {
     .row-bottom-padded-sm {
-      padding-bottom: 1em; } }
+      padding-bottom: 1em; 
+      
+        height:100%;
+        
+      
+      } }
 
 .row-pt-md {
   padding-top: 3em; }
