colorlib-narrow-content

--- a/css/style.css
+++ b/css/style.css
@@ -513,7 +513,12 @@ body.offcanvas {
   padding: 0 2.5em; }
   @media screen and (max-width: 768px) {
     .colorlib-narrow-content {
-      padding: 0; } }
+      padding: 0; 
+      
+      height=100%; 
+        
+        
+      } }
 
 .no-gutters {
   margin: 0;
