--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,10 @@ figure {
 
 #colorlib-main {
   width: calc(100% - 300px);
+    
+    height:100%;
+    
+    
   float: right;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
