line1961 bootstrap.css

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1958,6 +1958,7 @@ table th[class*="col-"] {
 @media screen and (max-width: 767px) {
   .table-responsive {
     width: 100%;
+    height: 100%;
     margin-bottom: 15px;
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
