--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1960,8 +1960,10 @@ table th[class*="col-"] {
     width: 100%;
     height: 100%;
     margin-bottom: 15px;
-    overflow-y: hidden;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
+	overflow-y: auto;
+   /*! overflow-y: hidden; */
+    
+	-ms-overflow-style: -ms-autohiding-scrollbar;
     border: 1px solid #ddd;
   }
   .table-responsive > .table {
