--- a/css/style.css
+++ b/css/style.css
@@ -1039,7 +1039,7 @@ body.offcanvas {
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 300px;
+/*  height: 300px; */  /*comment by zyue */
   width: 100%;
   height:100%;  
     
@@ -1228,10 +1228,15 @@ body.offcanvas {
 
 #map {
   width: 100%;
-  height: 700px; }
+  height: 100%;
+  /*height: 700px; */ /*comment by zyue*/
+  }
   @media screen and (max-width: 768px) {
     #map {
-      height: 200px; } }
+      /*height: 200px;*/ /*comment by zyue*/
+	  height: 100%;
+	  
+	  } }
 
 .colorlib-bg-color {
   background: #fafafa;
