--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ figure {
 #colorlib-main {
   width: calc(100% - 300px);
     
-    height:100%;
+    /*height:100%;*/
     
     
   float: right;
@@ -327,7 +327,7 @@ figure {
   @media screen and (max-width: 768px) {
     #colorlib-main {
       width: 100%;
-	  height: 100% /* zyue*/
+	 /* height: 100% */ /* zyue*/
 	  
       padding: 0 1em; } }
 
