--- a/css/style_backup.css
+++ b/css/style_backup.css
@@ -98,6 +98,8 @@
 *	Edit this section
 *
 * ======================================================= */
+
+
 body {
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
@@ -130,7 +132,8 @@ h1, h2, h3, h4, h5, h6 {
 figure {
   margin-bottom: 2.5em;
   float: left;
-  width: 100%; }
+  width: 100%; 
+}
   figure figcaption {
     font-size: 16px;
     width: 80%;
@@ -140,7 +143,8 @@ figure {
     font-family: "Quicksand", Arial, sans-serif; }
     @media screen and (max-width: 480px) {
       figure figcaption {
-        width: 100%; } }
+        width: 100%; 
+        } }
 
 ::-webkit-selection {
   color: #fff;
@@ -155,7 +159,7 @@ figure {
   background: #2c98f0; }
 
 #colorlib-page {
-  width: 100%;
+  width: 100%; 
   overflow: hidden;
   position: relative; }
 
@@ -174,10 +178,6 @@ figure {
   @media screen and (max-width: 768px) {
     #colorlib-aside {
       width: 300px;
-        height:100%;
-        
-        
-        
       -moz-transform: translateX(-300px);
       -webkit-transform: translateX(-300px);
       -ms-transform: translateX(-300px);
@@ -204,7 +204,8 @@ figure {
     font-size: 22px;
     margin-bottom: .5em;
     display: block;
-    width: 100%; }
+    width: 100%; 
+}
     #colorlib-aside #colorlib-logo a {
       display: block;
       text-align: center;
@@ -212,21 +213,10 @@ figure {
       padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
     display: block;
-    width: 100%; 
-    height: 100%;
-      
-      
-      
+    width: 100%;
 }
     #colorlib-aside #colorlib-main-menu .collapse {
-           display: block !important;
-            
-        
-      /*  
-        height: auto!important;
-      display: block !important; */
-
-}
+      display: block !important; }
     #colorlib-aside #colorlib-main-menu ul {
       text-align: center;
       margin: 0;
@@ -295,7 +285,8 @@ figure {
     font-weight: 400;
     color: rgba(0, 0, 0, 0.5);
     padding: 0 20px;
-    width: 100%; }
+    width: 100%;
+}
     @media screen and (max-width: 768px) {
       #colorlib-aside .colorlib-footer {
         position: relative;
@@ -320,10 +311,15 @@ figure {
 
 .container-wrap {
   max-width: 1170px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 #colorlib-main {
   width: calc(100% - 300px);
+    
+    /*height:100%;*/
+    
+    
   float: right;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
@@ -331,12 +327,14 @@ figure {
   @media screen and (max-width: 768px) {
     #colorlib-main {
       width: 100%;
+	 /* height: 100% */ /* zyue*/
+	  
       padding: 0 1em; } }
 
 #colorlib-hero {
-  min-height: 500px;
+  min-height: 1200px; /*1200px*/
   background: #fff url(../images/loader.gif) no-repeat center center;
-  width: 100%;
+  width: 100%;  
   float: left;
   margin-bottom: 10em;
   clear: both; }
@@ -351,7 +349,7 @@ figure {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom center;
-        min-height: 400px;
+        min-height: 1000px; /*1000px*/
         position: relative; }
     #colorlib-hero .flexslider .flex-control-nav {
       bottom: 20px;
@@ -443,7 +441,8 @@ figure {
               border: 1px solid #000 !important; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-              width: 100%; } }
+              width: 100%;          
+              } }
 
 body.offcanvas {
   overflow-x: hidden; }
@@ -469,7 +468,8 @@ body.offcanvas {
   padding: 0 2.5em; }
   @media screen and (max-width: 768px) {
     .colorlib-narrow-content {
-      padding: 0; } }
+      padding: 0;     
+      } }
 
 .no-gutters {
   margin: 0;
@@ -486,7 +486,7 @@ body.offcanvas {
   padding-top: 4em;
   padding-bottom: 9em;
   clear: both;
-  width: 100%;
+  width: 100%;   
   display: block; }
   @media screen and (max-width: 768px) {
     .colorlib-experience,
@@ -538,7 +538,8 @@ body.offcanvas {
   font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 .hire {
   padding: 2em;
@@ -558,7 +559,7 @@ body.offcanvas {
 .panel-heading a {
   padding: 20px 25px;
   display: block;
-  width: 100%;
+  width: 100%;    
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 1px;
@@ -941,7 +942,11 @@ body.offcanvas {
           font-size: 40px; } }
   .colorlib-feature .colorlib-text {
     padding-left: 120px;
-    width: 100%; }
+    width: 100%; 
+    height:100%;
+
+
+}
     .colorlib-feature .colorlib-text h2, .colorlib-feature .colorlib-text h3 {
       margin: 0;
       padding: 0; }
@@ -962,7 +967,7 @@ body.offcanvas {
         font-size: 28px; } }
 
 .blog-entry {
-  width: 100%;
+  width: 100%;   
   float: left;
   background: #fff;
   margin-bottom: 3em; }
@@ -970,7 +975,7 @@ body.offcanvas {
     .blog-entry {
       margin-bottom: 3em; } }
   .blog-entry .blog-img {
-    width: 100%;
+    width: 100%;    
     float: left;
     overflow: hidden;
     position: relative;
@@ -1034,8 +1039,12 @@ body.offcanvas {
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 300px;
+/*  height: 300px; */  /*comment by zyue */
   width: 100%;
+  height:100%;  
+    
+    
+    
   display: block;
   margin-bottom: 30px; }
   .project .desc {
@@ -1053,7 +1062,8 @@ body.offcanvas {
       padding: 20px;
       display: block;
       position: relative;
-      height: 300px; }
+      height: 300px; 
+}
       .project .desc .con .icon {
         position: absolute;
         bottom: 20px;
@@ -1218,10 +1228,15 @@ body.offcanvas {
 
 #map {
   width: 100%;
-  height: 700px; }
+  height: 100%;
+  /*height: 700px; */ /*comment by zyue*/
+  }
   @media screen and (max-width: 768px) {
     #map {
-      height: 200px; } }
+      /*height: 200px;*/ /*comment by zyue*/
+	  height: 100%;
+	  
+	  } }
 
 .colorlib-bg-color {
   background: #fafafa;
@@ -1520,7 +1535,8 @@ body.offcanvas {
   padding-bottom: 1em; }
   @media screen and (max-width: 768px) {
     .row-bottom-padded-sm {
-      padding-bottom: 1em; } }
+      padding-bottom: 3 em;   
+      } }
 
 .row-pt-md {
   padding-top: 3em; }
