--- a/css/bootstrap_original.css
+++ b/css/bootstrap_original.css
@@ -322,6 +322,8 @@ th {
 }
 
 html {
+  height:100%;
+  
   font-size: 10px;
   -webkit-tap-highlight-color: transparent;
 }
@@ -332,6 +334,8 @@ body {
   line-height: 1.42857;
   color: #333333;
   background-color: #fff;
+  
+  height:100%;
 }
 
 input,
@@ -1954,9 +1958,12 @@ table th[class*="col-"] {
 @media screen and (max-width: 767px) {
   .table-responsive {
     width: 100%;
+    height: 100%;
     margin-bottom: 15px;
-    overflow-y: hidden;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
+	overflow-y: auto;
+   /*! overflow-y: hidden; */
+    
+	-ms-overflow-style: -ms-autohiding-scrollbar;
     border: 1px solid #ddd;
   }
   .table-responsive > .table {
